--- a/Intent/app/src/main/res/layout/activity_main.xml
+++ b/Intent/app/src/main/res/layout/activity_main.xml
@@ -34,10 +34,10 @@
             />
 
         <Button
-            android:id="@+id/button_parcelable"
             android:text="@string/parcelable"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="handleParcelable"
             />
 
         <Button
