--- a/Intent/app/src/main/res/layout/activity_parcelable.xml
+++ b/Intent/app/src/main/res/layout/activity_parcelable.xml
@@ -84,10 +84,10 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button_submit"
         android:text="@string/submit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="handleSubmit"
         />
 
 </LinearLayout>
